...

    enum Credentials {
        static let openBankID = NSLocalizedString("Credentials.OpenBankID", tableName: tableName, bundle: bundle, value: "Open BankID", comment: "Text for BankID button shown in the add credentials/authenticate screen.")

        static let privacyPolicy = NSLocalizedString("Credentials.PrivacyPolicy", tableName: tableName, bundle: bundle, value: "Privacy Policy", comment: "Privacy policy clickable text used in Credentials.TermsAndConsentText.")

        static let viewDetails = NSLocalizedString("Credentials.ViewDetails", tableName: tableName, bundle: bundle, value: "View details", comment: "View details text (clickable) to lead to consent information that used in Credentials.TermsAndConsentText.")

        static let termsAndConditions = NSLocalizedString("Credentials.TermsAndConditions", tableName: tableName, bundle: bundle, value: "Terms and Conditions", comment: "Terms and conditions clickable text used in Credentials.TermsAndConsentText.")
...

        /// Text explaining that when using the service, the user agrees to Tink's Terms and Conditions, Privacy Policy. And the text explaining that the client will obtain financial information from the current user with a link for more information on which financial information specifically.
        static let termsAndConsentText = NSLocalizedString("Credentials.TermsAndConsentText", tableName: tableName, bundle: bundle, value: "By using the service, you agree to Tink’s %@ and %@. %@ will obtain parts of your financial information. %@", comment: "Text explaining that when using the service, the user agrees to Tink's Terms and Conditions, Privacy Policy. And the text explaining that th

        static let title = NSLocalizedString("Credentials.Title", tableName: tableName, bundle: bundle, value: "Authentication", comment: "Title for add credentials/authenticate screen.")
...

            /// Title for action to discard adding credentials.
            static let primaryAction = NSLocalizedString("Credentials.Discard.PrimaryAction", tableName: tableName, bundle: bundle, value: "Yes, cancel", comment: "Title for action to discard adding credentials.")

            /// Title for action sheet presented when user tries to dismiss modal while adding credentials.
...
        enum Error {
            /// Title for error shown when authentication failed while adding credentials.
            static let authenticationFailed = NSLocalizedString("Credentials.Error.AuthenticationFailed", tableName: tableName, bundle: bundle, value: "Authentication failed", comment: "Title for error shown when authentication failed while adding credentials.")

            /// Message for error shown when credentials already exists.
...

        /// Text shown when submitting supplemental information.
        static let sending = NSLocalizedString("CredentialsStatus.Sending", tableName: tableName, bundle: bundle, value: "Sending…", comment: "Text shown for dialog when supplemental information is submitted and waiting for credential status update.")

        /// Text shown when updating credentials.
...

        /// Text shown when adding credentials and waiting for authentication on another device.
        static let waitingForAuthenticationOnAnotherDevice = NSLocalizedString("CredentialsStatus.WaitingForAuthenticationOnAnotherDevice", tableName: tableName, bundle: bundle, value: "Waiting for authentication on another device", comment: "Text shown when adding credentials and waiting for authentication on another device.")
    }

...

        /// Title for cancelling an action or event.
        static let cancel = NSLocalizedString("Generic.Cancel", tableName: tableName, bundle: bundle, value: "Cancel", comment: "Text shown for Cancel button.")

        /// Title for generic close button.
        static let close = NSLocalizedString("Generic.Close", tableName: tableName, bundle: bundle, value: "Close", comment: "Title for generic close button.")

        /// Title for button to start authenticating credentials.
...

        /// Title for action to dismiss error alert.
        static let dismiss = NSLocalizedString("Generic.Dismiss", tableName: tableName, bundle: bundle, value: "Dismiss", comment: "Title for action to dismiss error alert.")

        /// Title for generic text to login.
        static let login = NSLocalizedString("Generic.Login", tableName: tableName, bundle: bundle, value: "Log in", comment: "Title for generic text to login.")

        /// Title for action to confirm an event.
        static let done = NSLocalizedString("Generic.Done", tableName: tableName, bundle: bundle, value: "Done", comment: "Title for action to confirm an event.")

        /// Title generic alert.
        static let error = NSLocalizedString("Generic.Error", tableName: tableName, bundle: bundle, value: "Something went wrong. Please try again later.", comment: "Title generic alert.")

        /// Title for action to confirm alert.
        static let ok = NSLocalizedString("Generic.OK", tableName: tableName, bundle: bundle, value: "OK", comment: "Title for action to confirm alert.")

        /// Title for action to retry a failed request.
...
    enum ProviderList {
        /// Placeholder in search field shown in provider list.
        static let searchHint = NSLocalizedString("ProviderList.SearchHint", tableName: tableName, bundle: bundle, value: "Search for a bank or card", comment: "Placeholder in search field shown in provider list.")

        /// Title for list of all providers.
        static let title = NSLocalizedString("ProviderList.Title", tableName: tableName, bundle: bundle, value: "Choose your bank", comment: "Title for list of all providers.")

        /// Description for when provider list is empty.
...

        /// Title for the personal authentication user type
        static let personal = NSLocalizedString("SelectAuthenticationUserType.Personal", tableName: tableName, bundle: bundle, value: "Personal", comment: "Title for the personal authentication user type")

        /// Title for the corporate authentication user type
...

        /// Title for form asking user to supplement information when adding credentials.
        static let title = NSLocalizedString("SupplementalInformation.Title", tableName: tableName, bundle: bundle, value: "Supplemental information", comment: "Title of the supplemental information dialog.")

        /// Title for button to submit supplemental information.
        static let submit = NSLocalizedString("SupplementalInformation.Submit", tableName: tableName, bundle: bundle, value: "Submit", comment: "Title for button to submit supplemental information.")
    }

...
